--- a/javascript/crono.html
+++ b/javascript/crono.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <script src="simplyCountdown.min.js"></script>
     <script src="cronometro.js"></script>
 </body>
 </html>
