--- a/javascript/crono.html
+++ b/javascript/crono.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Document</title>
 </head>
 <body>
+    
+    <div class="portada" id="portada">
+        <div class="header">
+            <h1 class="logotipo">cronometro</h1>
+            <p class="mensaje">prueba cronometro</p>
+        </div>
+        <div id="cuenta"id></div>
+    </div>
+    <main class="contenedor">
+        <img src="../img/Cuatro.jpg" alt="img">
+    </main>
     <script src="simplyCountdown.min.js"></script>
-    <script src="cronometro.js"></script>
+    <script src="./cronometro.js"></script>
 </body>
 </html>
