--- a/javascript/crono.html
+++ b/javascript/crono.html
@@ -13,11 +13,13 @@
             <h1 class="logotipo">cronometro</h1>
             <p class="mensaje">prueba cronometro</p>
         </div>
-        <div id="cuenta"id></div>
+        <div id="cuenta" ></div>
     </div>
     <main class="contenedor">
         <img src="../img/Cuatro.jpg" alt="img">
     </main>
+
+
     <script src="simplyCountdown.min.js"></script>
     <script src="./cronometro.js"></script>
 </body>
