--- a/javascript/crono.html
+++ b/javascript/crono.html
@@ -10,13 +10,12 @@
     
     <div class="portada" id="portada">
         <div class="header">
-            <h1 class="logotipo">cronometro</h1>
-            <p class="mensaje">prueba cronometro</p>
+            <h1 class="logotipo">Faltan:</h1>
         </div>
         <div id="cuenta" ></div>
     </div>
     <main class="contenedor">
-        <img src="../img/Cuatro.jpg" alt="img">
+        <img src="../img/Cuatro.jpg.jpg" alt="img">
     </main>
 
 
