--- a/javascript/crono.html
+++ b/javascript/crono.html
@@ -9,7 +9,7 @@
     
     <div class="portada" id="portada">
         <div class="header">
-            <h1 class="logotipo">Faltan:</h1>
+            <h1 class="logotipo">Faltan</h1>
         </div>
         <div id="cuenta" ></div>
     </div>
