--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     
@@ -14,11 +14,10 @@
         <div id="cuenta" ></div>
     </div>
     <main class="contenedor">
-        <img src="../img/Cuatro.jpg.jpg" alt="img">
+        <img src="img/Cuatro.jpg.jpg" alt="img">
     </main>
 
 
-    <script src="simplyCountdown.min.js"></script>
-    <script src="./cronometro.js"></script>
+    <script src="js/cronometro.js"></script>
 </body>
 </html>
