--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         </div>
         <div id="cuenta" ></div>
     </div>
-    <main class="contenedor">
-        <img src="img/Cuatro.jpg.jpg" alt="img">
+    <main class="contenedor" id="contenedor">
+        <img src="img/Cuatro.jpg.jpg" alt="img">                            
     </main>
 
 
