--- a/index.html
+++ b/index.html
@@ -8,15 +8,11 @@
 <body>
     
     <div class="portada" id="portada">
-        <div class="header">
-            <h1 class="logotipo">Faltan</h1>
+        <div id="tempo">
+            <h1 class="time">Faltan</h1>
+            <div id="cuenta" ></div>
         </div>
-        <div id="cuenta" ></div>
     </div>
-    <main class="contenedor" id="contenedor">
-        <img src="img/Cuatro.jpg.jpg" alt="img">                            
-    </main>
-
 
     <script src="js/cronometro.js"></script>
 </body>
