--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id="tempo">
             <h1 class="time">Faltan</h1>
             <div id="cuenta" ></div>
-            <h3 class="letras">HH &nbsp;&nbsp;&nbsp;MM &nbsp; &nbsp; &nbsp;SS </h3>
+            <h3 class="letras">HH &nbsp;&nbsp;&nbsp;MM &nbsp; &nbsp;SS </h3>
         </div>
     </div>
     <script src="js/cronometro.js"></script>
